# trabalho_ed_20191.1

./: .gitignore  CMakeLists.txt  Makefile  arvore_b_mais.c  arvore_b_mais.h  lista_nos_folhas.c  lista_nos_folhas.h  lista_nos_internos.c  lista_nos_internos.h  lista_pizzas.c  lista_pizzas.h  metadados.c  metadados.h  no_folha.c  no_folha.h  no_interno.c  no_interno.h  pizza.c  pizza.h  test_arvore_b_mais.c  ufftest.h
